# ec2-control-panel

./: .env.template  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  __main__.spec  app.py  config.go  confirm.go  connect.sh  devenv.nix  docker-compose.prod.yml  docker-compose.yml  dotenv.go  go.mod  go.sum  instances.json  ip.go  logger.go  main.go  mise.toml  pyproject.toml  run.sh  serve.go  status.go  test-london.py
cmd/ec2cp/: main.go
config/: instances.conf
deploy/: Dockerfile  docker-compose.yml
internal/cli/: cli.go  ip.go  mount.go  restart.go  serve.go  start.go  status.go  stop.go
internal/config/: instances.go
internal/ec2/: aws.go  cache.go  ip.go  launch.go  mount.go  snapshot.go  start.go  status.go  stop.go
internal/server/: handlers.go  server.go  streams.go  tasks.go
internal/server/ui/: index.html
spike/go/: confirm.go  eni.go  go.mod  go.sum  ip.go  main.go  mount.go  restart.go  serve.go  start.go  status.go  stop.go  userdata.go
spike/go/ui/: index.html
src/cli/: cli.go  confirm.go  hashpassword.go  ip.go  mount.go  restart.go  serve.go  start.go  status.go  stop.go
src/config/: dotenv.go  env.go  instances.go  users.go
src/ec2/: __main__.py  aws.go  cache.go  commands.py  ip.go  launch.go  launch_test.go  memo.go  mount.go  package.py  pricing.go  snapshot.go  start.go  status.go  stop.go  userdata.go
src/ec2/data/: efs.py  geo.py  instance.py  network.py  security_group.py  user_data.py  volume.py  vpc.py
src/ec2/templates/: user-data-chainload.sh  user-data-reference.sh.tpl  user-data-remount.sh.tpl
src/ec2_control_panel/: __main__.py  commands.py  config.py  instances.py  logger.py  package.py
src/ec2_control_panel/data/: efs.py  geo.py  instance.py  network.py  security_group.py  user_data.py  volume.py
src/ec2_control_panel/templates/: specs.json.tpl  user-data-reference.sh.tpl  user-data-remount.sh.tpl
src/progress/: logger.go
src/server/: auth.go  auth_test.go  handlers.go  server.go  stream_test.go  streams.go  tasks.go
src/server/ui/: index.html
src/tasks/: manager.go
tests/: test_config.py
ui/: index.html
