[project]
name = "ec2-control-panel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.4.0",
    "boto3>=1.40.74",
    "fire>=0.7.1",
    "jinja2>=3.1.6",
    "marimo>=0.17.8",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.40.74",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pdbpp>=0.11.7",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.5",
    "ruff-lsp>=0.0.62",
    "semgrep>=1.143.1",
]

[tool.uv]
package = true
default-groups = []
